--- a/configure.in
+++ b/configure.in
@@ -1032,9 +1032,19 @@ fi
 
 OUTPUT_FILES="Makefile \
              Makefile.include \
+             xbmc/Makefile \
+             xbmc/cores/Makefile \
+             xbmc/cores/VideoRenderers/Makefile \
+             xbmc/cores/dvdplayer/Makefile \
              xbmc/cores/dvdplayer/Codecs/Makefile \
              xbmc/cores/dvdplayer/Codecs/libdvd/Makefile \
+             xbmc/cores/dvdplayer/DVDCodecs/Makefile \
+             xbmc/cores/dvdplayer/DVDCodecs/Audio/Makefile \
+             xbmc/cores/dvdplayer/DVDCodecs/Overlay/Makefile \
+             xbmc/cores/dvdplayer/DVDCodecs/Video/Makefile \
              xbmc/cores/dvdplayer/DVDCodecs/Video/CrystalHD/Makefile \
+             xbmc/cores/dvdplayer/DVDDemuxers/Makefile \
+             xbmc/cores/dvdplayer/DVDSubtitles/Makefile \
              xbmc/cores/AudioRenderers/Makefile \
              xbmc/cores/paplayer/Makefile \
              xbmc/cores/paplayer/timidity/Makefile \
@@ -1047,6 +1057,9 @@ OUTPUT_FILES="Makefile \
              xbmc/cores/paplayer/SPCCodec/SNES/SNESAPU/Makefile \
              xbmc/cores/paplayer/WavPackCodec/Makefile \
              xbmc/cores/paplayer/YMCodec/StSoundLibrary/Makefile \
+             xbmc/cores/playercorefactory/Makefile \
+             xbmc/karaoke/Makefile \
+             guilib/Makefile \
              guilib/common/Makefile \
              xbmc/lib/libass/xbmc/Makefile \
              xbmc/lib/libXBMS/Makefile \
