--- a/guilib/Makefile.in
+++ b/guilib/Makefile.in
@@ -1,4 +1,7 @@
-INCLUDES=-I. -I../ -Icommon -I../xbmc -I../xbmc/cores/dvdplayer/Codecs/ffmpeg -I../xbmc/linux -I../xbmc/utils -I/usr/include/freetype2 -I/usr/include/SDL -I../xbmc/lib/libsquish
+INCLUDES=-I. -I../ -Icommon -I../xbmc -I../xbmc/linux -I../xbmc/utils -I/usr/include/freetype2 -I/usr/include/SDL -I../xbmc/lib/libsquish
+ifneq (@USE_EXTERNAL_FFMPEG@,1)
+  INCLUDES+=-I../xbmc/cores/dvdplayer/Codecs/ffmpeg
+endif
 
 SRCS=AnimatedGif.cpp \
      AudioContext.cpp \
