--- a/xbmc/cores/Makefile.in
+++ b/xbmc/cores/Makefile.in
@@ -1,4 +1,7 @@
-INCLUDES=-I. -I../ -Iffmpeg -I../linux -I../../guilib -I../utils -Idvdplayer
+INCLUDES=-I. -I../ -I../linux -I../../guilib -I../utils -Idvdplayer
+ifneq (@USE_EXTERNAL_FFMPEG@,1)
+  INCLUDES+=-Iffmpeg
+endif
 
 SRCS=DummyVideoPlayer.cpp \
      ssrc.cpp \
