--- a/xbmc/cores/dvdplayer/DVDCodecs/Overlay/Makefile.in
+++ b/xbmc/cores/dvdplayer/DVDCodecs/Overlay/Makefile.in
@@ -1,4 +1,7 @@
-INCLUDES=-I../../../../.. -I. -I../../ -I../../../../ -I../../Codecs/ffmpeg -I../../../../linux -I../../../../../guilib
+INCLUDES=-I../../../../.. -I. -I../../ -I../../../../ -I../../../../linux -I../../../../../guilib
+ifneq (@USE_EXTERNAL_FFMPEG@,1)
+  INCLUDES+=-I../../Codecs/ffmpeg
+endif
 
 SRCS=	DVDOverlayCodecCC.cpp \
 	DVDOverlayCodecFFmpeg.cpp \
