--- a/xbmc/cores/dvdplayer/DVDDemuxers/Makefile.in
+++ b/xbmc/cores/dvdplayer/DVDDemuxers/Makefile.in
@@ -1,4 +1,7 @@
-INCLUDES=-I../../../.. -I. -I.. -I../.. -I../../../ -I../Codecs/ffmpeg -I../../../utils -I../../../linux -I../../../../guilib
+INCLUDES=-I../../../.. -I. -I.. -I../.. -I../../../ -I../../../utils -I../../../linux -I../../../../guilib
+ifneq (@USE_EXTERNAL_FFMPEG@,1)
+  INCLUDES+=-I../Codecs/ffmpeg
+endif
 CXXFLAGS+=-D__STDC_CONSTANT_MACROS \
 
 SRCS=	DVDDemux.cpp \
