--- a/Makefile.in
+++ b/Makefile.in
@@ -90,13 +90,10 @@ endif
 
 LIB_DIRS=\
 	xbmc/lib/cximage-6.0 \
-	xbmc/lib/libaddon \
 	xbmc/lib/libexif \
 	xbmc/lib/libhdhomerun \
 	xbmc/lib/libid3tag \
-	xbmc/lib/libPython/linux \
-	xbmc/lib/librefmem \
-	xbmc/lib/libvisualisation
+	xbmc/lib/libPython/linux
 
 SS_DIRS=\
 	xbmc/screensavers/rsxs-0.9/xbmc
@@ -264,10 +261,6 @@ exports:
 	$(MAKE) -C xbmc/cores/DllLoader/exports wrapper.def
 dllloader: exports
 	$(MAKE) xbmc/cores/DllLoader/dllloader.a
-addons: exports
-	$(MAKE) -C xbmc/lib/librefmem
-	$(MAKE) -C xbmc/lib/libaddon
-	$(MAKE) -C xbmc/lib/libvisualisation
 visualizations: exports
 	$(MAKE) -C xbmc/visualizations/OpenGLSpectrum
 	$(MAKE) -C xbmc/visualizations/XBMCProjectM
@@ -334,7 +327,7 @@ imagelib: dllloader
 
 codecs: papcodecs dvdpcodecs
 libs: libhdhomerun libid3tag imagelib libexif python
-externals: codecs libs python addons visualizations screensavers
+externals: codecs libs python visualizations screensavers
 
 xcode_depends: \
 	codecs libs python addons visualizations screensavers eventclients \
@@ -415,9 +408,6 @@ OBJSXBMC += \
 	xbmc/lib/libSDL-OSX/libSDL-@ARCH@.a \
 	xbmc/lib/libSDL-OSX/libSDL_mixer-@ARCH@.a
 endif
-
-# addon dll libraries
-LIBS+=-Lsystem -lrefmem -laddon -lvisualisation
 
 xbmc.bin: $(OBJSXBMC) $(DYNOBJSXBMC)
 ifeq ($(findstring osx,$(ARCH)), osx)
