--- a/xbmc/Makefile.in
+++ b/xbmc/Makefile.in
@@ -115,6 +115,8 @@ SRCS=Application.cpp \
      Song.cpp \
      VideoDatabase.cpp \
      ViewDatabase.cpp \
+     GUIDialogAddonBrowser.cpp \
+     GUIDialogAddonSettings.cpp \
      GUIDialogAudioSubtitleSettings.cpp \
      GUIDialogBoxBase.cpp \
      GUIDialogButtonMenu.cpp \
@@ -142,7 +144,6 @@ SRCS=Application.cpp \
      GUIDialogVideoBookmarks.cpp \
      GUIDialogVideoSettings.cpp \
      GUIDialogVisualisationPresetList.cpp \
-     GUIDialogVisualisationSettings.cpp \
      GUIDialogVolumeBar.cpp \
      GUIDialogSlider.cpp \
      GUIDialogYesNo.cpp \
@@ -187,10 +188,7 @@ SRCS=Application.cpp \
      GUILargeTextureManager.cpp \
      GUIDialogKaiToast.cpp \
      KeyboardLayoutConfiguration.cpp \
-     GUIDialogPluginSettings.cpp \
-     PluginSettings.cpp \
      GUIDialogAccessPoints.cpp \
-     ScraperSettings.cpp \
      Artist.cpp \
      Album.cpp \
      MediaSource.cpp \
@@ -205,7 +203,6 @@ SRCS=Application.cpp \
      ZeroconfBrowser.cpp \
      VideoReferenceClock.cpp \
      DPMSSupport.cpp \
-     ScriptSettings.cpp \
      GUIWindowTestPatternGL.cpp \
      RenderSystem.cpp \
      RenderSystemGL.cpp \
