--- a/xbmc.vcproj
+++ b/xbmc.vcproj
@@ -1118,6 +1118,12 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 					RelativePath=".\xbmc\utils\Trainer.cpp">
 				</File>
 				<File
+					RelativePath=".\xbmc\utils\TimeUtils.cpp">
+				</File>
+				<File
+					RelativePath=".\xbmc\utils\TimeUtils.h">
+				</File>
+				<File
 					RelativePath=".\xbmc\utils\TuxBoxUtil.cpp">
 				</File>
 				<File
