--- a/configure.in
+++ b/configure.in
@@ -194,6 +194,11 @@ AC_ARG_ENABLE([asap-codec],
                 [enable ASAP ADPCM support])],
               [use_asap=$enableval],
               [use_asap=no])
+AC_ARG_ENABLE([webserver],
+              [AS_HELP_STRING([--disable-webserver],
+                [disable webserver])],
+              [use_webserver=$enableval],
+              [use_webserver=yes])
 
 ### External libraries options
 AC_ARG_ENABLE([external-libraries],
@@ -320,6 +325,10 @@ else
   AC_CHECK_LIB([SDL_gfx], [main])
 fi
 
+if test "$use_webserver" = "yes"; then
+  AC_CHECK_LIB([microhttpd],  [main],, AC_MSG_ERROR($missing_library))
+fi
+
 
 # platform independent libraries
 AC_CHECK_HEADER([mad.h],,            AC_MSG_ERROR($missing_library))
@@ -336,7 +345,7 @@ AC_CHECK_LIB([lzo2],        [main],, AC_MSG_ERROR($missing_library))
 AC_CHECK_LIB([z],           [main],, AC_MSG_ERROR($missing_library))
 AC_CHECK_LIB([ssl],         [main],, AC_MSG_ERROR($missing_library))
 AC_CHECK_LIB([crypto],      [main],, AC_MSG_ERROR($missing_library))
-AC_CHECK_LIB([microhttpd],  [main],, AC_MSG_ERROR($missing_library))
+
 PKG_CHECK_MODULES([MAD],        [mad],
                   [INCLUDES+=" $MAD_CFLAGS"; LIBS+=" $MAD_LIBS"],
                   AC_MSG_ERROR($missing_library))
@@ -962,6 +971,15 @@ if test "$use_asap" = "yes"; then
 else
   USE_ASAP_CODEC=0
   final_message="$final_message\n  ASAP Codec:\tNo"
+fi
+
+if test "$use_webserver" = "yes"; then
+  final_message="$final_message\n  Webserver:\tYes"
+  HAVE_XBMC_NONFREE=1
+  AC_DEFINE([HAS_WEB_SERVER], [1], [Define to 1 to enable webserver.])
+else
+  HAS_WEB_SERVER=0
+  final_message="$final_message\n  Webserver:\tNo"
 fi
 
 ### External libraries messages
