--- a/xbmc/utils/Makefile
+++ b/xbmc/utils/Makefile
@@ -32,6 +32,7 @@ SRCS=AlarmClock.cpp \
      Win32Exception.cpp \
      CPUInfo.cpp \
      PCMAmplifier.cpp \
+     PCMRemap.cpp \
      LabelFormatter.cpp \
      Network.cpp \
      BitstreamStats.cpp \
