--- a/xbmc/pvrclients/vdr-streamdev/project/VS2008Express/XBMC_VDR.vcproj
+++ b/xbmc/pvrclients/vdr-streamdev/project/VS2008Express/XBMC_VDR.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="XBMC_VDR"
+	Name="pvclient_vdr"
 	ProjectGUID="{838CDE27-AFDF-449F-9981-A78903C9C71E}"
 	RootNamespace="XBMC_VDR"
 	Keyword="Win32Proj"
@@ -299,12 +299,6 @@
 				RelativePath="..\..\vtptransceiver.h"
 				>
 			</File>
-		</Filter>
-		<Filter
-			Name="Resource Files"
-			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
-			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
-			>
 		</Filter>
 		<File
 			RelativePath="..\..\README"
