--- a/xbmc/lib/libRTV/libRTV.vcproj
+++ b/xbmc/lib/libRTV/libRTV.vcproj
@@ -44,7 +44,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="_DEBUG;_WIN32;_LIB"
+				PreprocessorDefinitions="_DEBUG;_WIN32;_LIB;_CRT_SECURE_NO_WARNINGS"
 				BasicRuntimeChecks="3"
 				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
@@ -111,7 +111,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				OmitFramePointers="true"
-				PreprocessorDefinitions="NDEBUG;_XBOX;PROFILE;_LIB"
+				PreprocessorDefinitions="NDEBUG;_XBOX;PROFILE;_LIB;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -185,7 +185,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				OmitFramePointers="true"
-				PreprocessorDefinitions="NDEBUG;_XBOX;PROFILE;FASTCAP;_LIB"
+				PreprocessorDefinitions="NDEBUG;_XBOX;PROFILE;FASTCAP;_LIB;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -260,7 +260,7 @@
 				Optimization="3"
 				FavorSizeOrSpeed="0"
 				OmitFramePointers="true"
-				PreprocessorDefinitions="NDEBUG;_WIN32;_LIB"
+				PreprocessorDefinitions="NDEBUG;_WIN32;_LIB;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="false"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -329,7 +329,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				OmitFramePointers="true"
-				PreprocessorDefinitions="NDEBUG;_LIB"
+				PreprocessorDefinitions="NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
